ADD: CNPJ na entity de User/HealthCenter, na interface e model, além da controller e service
